# Deep-Live-Cam

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/components/: controls-panel.tsx  metrics-panel.tsx  model-manager.tsx  profile-card.tsx  (+4 more)
core/: requirements-linux.txt  server.py  setup.sh  start.sh
core/models/: .gitattributes  4xFFHQDAT.pth  insightface-0.7.3-cp310-cp310-win_amd64.whl
core/modules/: camera_utils.py  core.py  face_analyser.py  globals.py  paths.py  ui.py  virtual_camera.py
core/rust-engine/: .gitignore  Cargo.toml
core/rust-engine/.cargo/: config.toml
core/rust-engine/dlc-capture/: Cargo.toml
core/rust-engine/dlc-capture/src/: lib.rs
core/rust-engine/dlc-core/: Cargo.toml
core/rust-engine/dlc-core/src/: detect.rs  enhance.rs  lib.rs  preprocess.rs  swap.rs  tracker.rs
core/rust-engine/dlc-server/: Cargo.toml
core/rust-engine/dlc-server/src/: lib.rs  main.rs  model_manifest.rs  profiles.rs  router.rs  state.rs
core/rust-engine/dlc-server/tests/: integration.rs
core/rust-engine/tests/: compare_backends.py
plans/: 260329-deferred-issues.md
plans/260328-0116-deep-live-cam-setup/: phase-01-clone-env-setup.md  phase-02-model-setup.md  phase-03-gpu-optimization.md  phase-04-customization.md  plan.md
plans/260328-0424-deep-wcam-next-phases/: phase-01-upstream-prs.md  phase-02-rust-core.md  phase-02-tauri-app-sequential.md  phase-03-rust-migration-sequential.md  phase-03-tauri-app.md  plan.md  research-tauri-sidecar.md  research-upstream-prs.md
plans/260328-0510-tauri-app-features/: phase-01-camera-enhancer-ui.md  phase-02-python-bundle.md  phase-03-installers-cicd.md  plan.md
plans/260329-0630-gpu-ui-server-mode/: phase-01-directml-gpu.md  phase-02-enhanced-frontend.md  phase-03-model-management.md  phase-04-io-sources.md  phase-05-server-mode.md  plan.md
plans/260329-2010-source-face-catalog/: plan.md
plans/reports/: brainstorm-260330-1617-speed-optimization.md  code-reviewer-260328-0253-models-dir-centralization.md  code-reviewer-260328-0632-phase1-camera-enhancer.md  code-reviewer-260329-2005-full-review.md  code-reviewer-260330-full-review.md  fullstack-developer-260328-1506-comparison-test-harness.md  fullstack-developer-260329-2017-profile-catalog-components.md  fullstack-developer-260329-2024-model-hot-reload.md  fullstack-developer-260329-2024-video-file-input.md  planner-260328-0431-deep-wcam-next-phases.md  planner-260329-2004-v03-status-audit.md  project-manager-260328-0253-deep-live-cam-setup-complete.md  researcher-260328-0316-cross-platform-compiled-app-plugin.md  researcher-260328-0511-tauri-installers.md  researcher-260328-upstream-pr-analysis.md  researcher-260329-2004-upstream-prs-brainstorm.md  researcher-260329-directml-ort.md  researcher-260329-ui-architecture.md  scout-260328-0426-INDEX.txt  scout-260328-0426-architecture-summary.txt  scout-260328-0426-rust-rewrite-analysis.json  tester-260328-0632-phase1-build-lint.md
scripts/: build-rust-sidecar-win.ps1  build-rust-sidecar.sh  build-sidecar-macos.sh  build-sidecar.sh  setup-directml-dlls.ps1
(+19 files in other folders)
