[package]
name = "dlc-core"
description = "Face processing pipeline: detection, swap, enhancement"
version.workspace = true
edition.workspace = true

[dependencies]
ort.workspace = true
ndarray.workspace = true
image.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "validate-models"
path = "src/bin/validate_models.rs"
