[package]
name = "dlc-server"
description = "HTTP/WebSocket server replacing Python FastAPI sidecar"
version.workspace = true
edition.workspace = true

# Expose a library target so integration tests can import `build_router`
# and `test_state` without binding a real TCP socket.
[lib]
name = "dlc_server"
path = "src/lib.rs"

[[bin]]
name = "dlc-server"
path = "src/main.rs"

[dependencies]
dlc-core = { path = "../dlc-core" }
dlc-capture = { path = "../dlc-capture" }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
ndarray.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

[dev-dependencies]
# Integration tests drive the router in-process via tower::ServiceExt.
# All three crates are already pulled in transitively; pinning here ensures
# `cargo test` resolves them correctly without a network fetch.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
